--- a/bonus-checklist/index.html
+++ b/bonus-checklist/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 확인 가이드 88</title>
-  <meta name="description" content="입플사이트(입금플러스) 이용 전 카지노입플·슬롯입플 조건을 10초 체크리스트로 점검하세요. 롤링/제외게임/최대지급/기간/출금 규정까지 한눈에 정리. 배당 마진·EV·확률 계산기와 함께 제공합니다." />
-  <meta property="og:title" content="입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 10초 점검 (88)" />
-  <meta property="og:description" content="입플/첫충/페이백 조건을 빠르게 정리하고, 롤링·제외게임·최대지급·기간·출금 규정을 체크하세요." />
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="ko_KR" />
-  <meta name="robots" content="index,follow" />
-
-    
-
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<title>입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 확인 가이드 88</title>
+<meta content="입플사이트(입금플러스) 이용 전 카지노입플·슬롯입플 조건을 10초 체크리스트로 점검하세요. 롤링/제외게임/최대지급/기간/출금 규정까지 한눈에 정리. 배당 마진·EV·확률 계산기와 함께 제공합니다." name="description"/>
+<meta content="입플사이트 체크리스트 | 카지노입플·슬롯입플 조건 10초 점검 (88)" property="og:title"/>
+<meta content="입플/첫충/페이백 조건을 빠르게 정리하고, 롤링·제외게임·최대지급·기간·출금 규정을 체크하세요." property="og:description"/>
+<meta content="website" property="og:type"/>
+<meta content="ko_KR" property="og:locale"/>
+<meta content="index,follow" name="robots"/>
 <style>
     :root{
   /* Theme (auto/preset) */
@@ -126,7 +124,7 @@
       transition: transform .2s ease, border-color .2s ease, background .2s ease;
       white-space:nowrap;
     }
-    .linkbtn:hover{ transform: translateY(-1px); border-color: rgba(255,255,255,.18); background: rgba(255,255,255,.06); }
+    .linkbtn:hover{ transform: translateY(-1px); border-color:var(--muted-2); background: rgba(255,255,255,.06); }
 
     .hero{
       margin-top: 8px;
@@ -173,7 +171,7 @@
       letter-spacing: -.2px;
       transition: transform .2s ease, background .2s ease, border-color .2s ease;
     }
-    .cta:hover{ transform: translateY(-1px); background: rgba(255,255,255,.07); border-color: rgba(255,255,255,.18); }
+    .cta:hover{ transform: translateY(-1px); background: rgba(255,255,255,.07); border-color:var(--muted-2); }
     .cta.primary{
       border-color: rgba(214,180,107,.42);
       background: rgba(214,180,107,.12);
@@ -242,7 +240,7 @@
       min-height: 88px;
       display:flex; flex-direction:column; gap:6px;
     }
-    .tool:hover{ transform: translateY(-1px); background: rgba(255,255,255,.06); border-color: rgba(255,255,255,.18); }
+    .tool:hover{ transform: translateY(-1px); background: rgba(255,255,255,.06); border-color:var(--muted-2); }
     .tool .t{ font-weight: 900; }
     .tool .d{ font-size: 13px; color: rgba(232,232,238,.74); }
 
@@ -290,11 +288,11 @@
       border: 1px solid rgba(255,255,255,0.10);
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
-      color: rgba(255,255,255,0.86);
+      color:var(--text-2);
       font-size: 13px;
       line-height: 1.45;
     }
-    .disclaimer-box strong{ color: rgba(255,255,255,0.95); }
+    .disclaimer-box strong{ color:var(--text); }
     .disclaimer-box p{ margin: 6px 0 0; }
 
     .footer{
@@ -328,29 +326,28 @@
 }
 
 </style>
-<script src="../assets/theme-preset.js" defer></script>
-
+<script defer="" src="../assets/theme-preset.js"></script>
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
   /* unify accent (blue) */
-  --accent1:#5fb2ff !important;
-  --accent2:#a8dcff !important;
-  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
-  --accentText:#00121a !important;
-  --accentOn:#00121a !important;
+  --accent1:#5fb2ff;
+  --accent2:#a8dcff;
+  --accentRGB:95,178,255;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a;
+  --accentOn:#00121a;
 
   /* unify tokens */
-  --bg:#05060b !important;
-  --panel:rgba(12,14,22,.62) !important;
-  --glassA:.72 !important;
-  --glassStrongA:.86 !important;
-  --glassSoftA:.18 !important;
-  --glassBorder:rgba(255,255,255,.10) !important;
+  --bg:#05060b;
+  --panel:rgba(12,14,22,.62);
+  --glassA:.72;
+  --glassStrongA:.86;
+  --glassSoftA:.18;
+  --glassBorder:rgba(255,255,255,.10);
 
   /* backward compat */
-  --gold: var(--accent1) !important;
-  --gold2: var(--accent2) !important;
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
 }
 
 /* premium midnight background */
@@ -360,7 +357,7 @@ body{
     radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
     radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
     linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
-  color:#fff;
+  color:var(--text);
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
 }
 
@@ -381,7 +378,7 @@ h3 .badge{ display:none !important; }
 input, select, textarea{
   background: rgba(0,0,0,.28) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color:#fff !important;
+  color:var(--text) !important;
   border-radius:14px !important;
   outline:none;
 }
@@ -394,7 +391,7 @@ input:focus, select:focus, textarea:focus{
 .btn, button, a.btn{
   background: rgba(255,255,255,.06) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color: rgba(255,255,255,.92) !important;
+  color:var(--text) !important;
   box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
 }
 .btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
@@ -409,8 +406,6 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -431,159 +426,142 @@ a{ color:inherit; }
   ]
 }
 </script>
-
 <script src="/assets/js/88st-analytics.js"></script>
-
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
-<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
+<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
 </head>
 <body>
-<section class="rel-links" aria-label="랜딩 바로가기" style="margin-top:16px;">
-  <h2>랜딩 바로가기</h2>
-  <div class="rel-grid">
-    <a href="/landing-a/" data-cta="bc_landing_a">입플·보너스 안내</a>
-    <a href="/landing-b/" data-cta="bc_landing_b">고액 유저 안내</a>
-    <a href="/landing-c/" data-cta="bc_landing_c">마진·EV 계산 가이드</a>
-    <a href="/landing-d/" data-cta="bc_landing_d">배당 흐름 분석</a>
-    <a href="/casino/" data-cta="bc_casino">카지노</a>
-    <a href="/slot/" data-cta="bc_slot">슬롯</a>
-    <a href="/minigame/" data-cta="bc_minigame">미니게임</a>
-    <a href="/ipl/" data-cta="bc_ipl">IPL</a>
-  </div>
+<section aria-label="랜딩 바로가기" class="rel-links" style="margin-top:16px;">
+<h2>랜딩 바로가기</h2>
+<div class="rel-grid">
+<a data-cta="bc_landing_a" href="/landing-a/">입플·보너스 안내</a>
+<a data-cta="bc_landing_b" href="/landing-b/">고액 유저 안내</a>
+<a data-cta="bc_landing_c" href="/landing-c/">마진·EV 계산 가이드</a>
+<a data-cta="bc_landing_d" href="/landing-d/">배당 흐름 분석</a>
+<a data-cta="bc_casino" href="/casino/">카지노</a>
+<a data-cta="bc_slot" href="/slot/">슬롯</a>
+<a data-cta="bc_minigame" href="/minigame/">미니게임</a>
+<a data-cta="bc_ipl" href="/ipl/">IPL</a>
+</div>
 </section>
-
-  <div class="notice" id="noticeBar">
-    <a href="/?from=bonus" data-utm="1">
-      <span class="pill">안내</span>
-      <span class="txt">공식 문의/공지 채널은 한 곳만 운영합니다 · 사칭 주의</span>
-      <span class="chev">↗</span>
-    </a>
-  </div>
-
-  <div class="wrap">
-    <div class="top">
-      <a class="brand" href="/?from=bonus_top">
-        <img class="logoImg" src="/img/logo.png" alt="88" />
-        <div class="name">88</div>
-      </a>
-      <div class="links">
-        <a class="linkbtn" href="/tool-margin/?from=bonus_nav">마진 계산기</a>
-        <a class="linkbtn" href="/tool-ev/?from=bonus_nav">EV 계산기</a>
-        <a class="linkbtn" href="/analysis/?from=bonus_nav">분석기</a>
-      </div>
-    </div>
-
-    <div class="hero">
-      <h1>입플사이트 체크리스트: 카지노입플·슬롯입플 조건 10초 점검</h1>
-      <p>보너스는 “있어 보이는 문구”보다 <b>조건</b>이 전부입니다. 롤링/제외게임/최대지급/기간/출금 규정을 한 번에 체크하고, 불필요한 실수를 줄이세요.</p>
-      <div class="badges">
-        <span class="badge"><strong>핵심</strong> 롤링·제외게임</span>
-        <span class="badge"><strong>주의</strong> 최대지급·환수</span>
-        <span class="badge"><strong>추천</strong> 체크리스트 복사</span>
-      </div>
-      <div class="cta-row">
-        <a class="cta primary" href="/analysis/?from=bonus_hero">🧩 분석기 열기 <small>저장/공유 포함</small></a>
-        <a class="cta" href="/tool-ev/?from=bonus_hero">📈 EV 계산기 <small>기대값 확인</small></a>
-        <a class="cta" href="/tool-margin/?from=bonus_hero">🧮 마진 계산기 <small>불리함 점검</small></a>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>왜 이 체크리스트가 필요한가요?</h2>
-      <div class="grid2">
-        <div class="card">
-          <h3>입플/첫충/페이백 문구는 비슷하지만, 조건은 전부 다릅니다</h3>
-          <p>특히 <b>카지노입플</b>과 <b>슬롯입플</b>은 적용 게임/롤링/최대지급/출금 제한에서 차이가 큽니다. “좋아 보이는 혜택”을 바로 따라가기 전에, 아래 항목만 먼저 확인하세요.</p>
-          <ul class="clean">
-            <li><b>롤링</b>: 몇 배를 채워야 출금 가능한지</li>
-            <li><b>제외 게임</b>: 적용 제외되는 슬롯/게임이 있는지</li>
-            <li><b>최대 지급</b>: 보너스 상한 및 환수 규정</li>
-            <li><b>기간</b>: 유효기간/소멸/일일 제한</li>
-            <li><b>출금 조건</b>: 추가 서류/검수/지연 조건</li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>한 번에 복사해서 쓰는 “10초 점검 템플릿”</h3>
-          <p>아래 템플릿을 그대로 복사해서, 문의/확인할 때 체크박스로 쓰면 실수가 확 줄어듭니다.</p>
-          <div class="copybar">
-            <button type="button" class="copybtn" id="copyChecklist">체크리스트 복사</button>
-            <div class="copynote" id="copyNote">클릭하면 텍스트가 복사됩니다.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="checklist" id="checklist">
-        <div class="check"><div class="dot">1</div><div><b>롤링(요구 배팅)</b><span>몇 배? 적용 게임? 롤링 산정 방식(스포츠/카지노/슬롯) 확인</span></div></div>
-        <div class="check"><div class="dot">2</div><div><b>제외/제한 게임</b><span>특정 슬롯, 미니게임, 특정 배당/특정 리그 제외 여부</span></div></div>
-        <div class="check"><div class="dot">3</div><div><b>최대 지급/상한</b><span>보너스 최대지급, 최대환수, 최대출금, 배당/배팅 한도 제한</span></div></div>
-        <div class="check"><div class="dot">4</div><div><b>유효기간/소멸</b><span>지급 후 몇 시간/몇 일 내 사용? 미사용 시 소멸? 일일 횟수 제한?</span></div></div>
-        <div class="check"><div class="dot">5</div><div><b>출금/검수 조건</b><span>출금 지연 기준, 추가 서류/인증 요구, 규정 위반 시 환수 조건</span></div></div>
-      </div>
-
-      <div class="disclaimer-box" role="note" aria-label="안내">
-        <strong>안내</strong>
-        <p>본 페이지는 특정 서비스/브랜드의 공식 페이지가 아니며, 보너스 조건을 이해하고 점검하는 데 도움을 주는 가이드 페이지입니다.</p>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>함께 쓰면 좋은 도구</h2>
-      <p style="margin:0;color:rgba(232,232,238,.72);">입플 조건은 “문구”보다 실제 체감이 중요합니다. 배당/확률/기대값을 숫자로 확인해보세요.</p>
-      <div class="tools">
-        <a class="tool" href="/tool-odds/?from=bonus_tools">
-          <div class="t">확률↔배당 변환기</div>
-          <div class="d">확률 감각을 숫자로</div>
-        </a>
-        <a class="tool" href="/tool-margin/?from=bonus_tools">
-          <div class="t">배당 마진 계산기</div>
-          <div class="d">오버라운드로 불리함 점검</div>
-        </a>
-        <a class="tool" href="/tool-ev/?from=bonus_tools">
-          <div class="t">EV 계산기</div>
-          <div class="d">내 확률로 기대값 확인</div>
-        </a>
-        <a class="tool" href="/analysis/?from=bonus_tools">
-          <div class="t">분석기</div>
-          <div class="d">결과 저장/공유</div>
-        </a>
-      </div>
-    </div>
-
-    <div class="section faq" id="faq">
-      <h2>자주 묻는 질문(FAQ)</h2>
-
-      <details>
-        <summary>입플사이트(입금플러스)에서 꼭 먼저 확인해야 할 조건은?</summary>
-        <p>롤링(요구 배팅)·제외게임·최대지급·유효기간·출금/검수 조건 5가지만 먼저 확인해도 대부분의 실수를 줄일 수 있습니다.</p>
-      </details>
-
-      <details>
-        <summary>카지노입플과 슬롯입플은 뭐가 다른가요?</summary>
-        <p>적용 게임 범위와 롤링 산정, 제외 게임, 최대 지급 조건이 다를 수 있습니다. 같은 “입플”이라도 슬롯/테이블/라이브 여부에 따라 제한이 붙는 경우가 많습니다.</p>
-      </details>
-
-      <details>
-        <summary>“최대 지급/환수”는 왜 중요하죠?</summary>
-        <p>상한이 낮거나 환수 조건이 까다로우면, 보너스가 있어도 체감 이득이 거의 없을 수 있습니다. 특히 규정 위반 시 환수 기준을 미리 확인하는 게 중요합니다.</p>
-      </details>
-
-      <details>
-        <summary>조건이 길면 어떻게 문의/확인해야 하나요?</summary>
-        <p>이 페이지의 템플릿을 복사해 체크박스로 문의하면 빠르고 정확합니다. “롤링/제외/상한/기간/출금” 5개 항목을 기준으로 답을 받으세요.</p>
-      </details>
-
-      <details>
-        <summary>배당/확률/EV 계산기는 여기랑 무슨 관계가 있나요?</summary>
-        <p>보너스 조건을 확인해도, 실제 의사결정은 숫자(확률/기대값/마진)로 검증하는 게 가장 안정적입니다. 도구를 함께 쓰면 과신을 줄이고 판단이 빨라집니다.</p>
-      </details>
-    </div>
-
-    <div class="footer">
+<div class="notice" id="noticeBar">
+<a data-utm="1" href="/?from=bonus">
+<span class="pill">안내</span>
+<span class="txt">공식 문의/공지 채널은 한 곳만 운영합니다 · 사칭 주의</span>
+<span class="chev">↗</span>
+</a>
+</div>
+<div class="wrap">
+<div class="top">
+<a class="brand" href="/?from=bonus_top">
+<img alt="88" class="logoImg" src="/img/logo.png"/>
+<div class="name">88</div>
+</a>
+<div class="links">
+<a class="linkbtn" href="/tool-margin/?from=bonus_nav">마진 계산기</a>
+<a class="linkbtn" href="/tool-ev/?from=bonus_nav">EV 계산기</a>
+<a class="linkbtn" href="/analysis/?from=bonus_nav">분석기</a>
+</div>
+</div>
+<div class="hero">
+<h1>입플사이트 체크리스트: 카지노입플·슬롯입플 조건 10초 점검</h1>
+<p>보너스는 “있어 보이는 문구”보다 <b>조건</b>이 전부입니다. 롤링/제외게임/최대지급/기간/출금 규정을 한 번에 체크하고, 불필요한 실수를 줄이세요.</p>
+<div class="badges">
+<span class="badge"><strong>핵심</strong> 롤링·제외게임</span>
+<span class="badge"><strong>주의</strong> 최대지급·환수</span>
+<span class="badge"><strong>추천</strong> 체크리스트 복사</span>
+</div>
+<div class="cta-row">
+<a class="cta primary" href="/analysis/?from=bonus_hero">🧩 분석기 열기 <small>저장/공유 포함</small></a>
+<a class="cta" href="/tool-ev/?from=bonus_hero">📈 EV 계산기 <small>기대값 확인</small></a>
+<a class="cta" href="/tool-margin/?from=bonus_hero">🧮 마진 계산기 <small>불리함 점검</small></a>
+</div>
+</div>
+<div class="section">
+<h2>왜 이 체크리스트가 필요한가요?</h2>
+<div class="grid2">
+<div class="card">
+<h3>입플/첫충/페이백 문구는 비슷하지만, 조건은 전부 다릅니다</h3>
+<p>특히 <b>카지노입플</b>과 <b>슬롯입플</b>은 적용 게임/롤링/최대지급/출금 제한에서 차이가 큽니다. “좋아 보이는 혜택”을 바로 따라가기 전에, 아래 항목만 먼저 확인하세요.</p>
+<ul class="clean">
+<li><b>롤링</b>: 몇 배를 채워야 출금 가능한지</li>
+<li><b>제외 게임</b>: 적용 제외되는 슬롯/게임이 있는지</li>
+<li><b>최대 지급</b>: 보너스 상한 및 환수 규정</li>
+<li><b>기간</b>: 유효기간/소멸/일일 제한</li>
+<li><b>출금 조건</b>: 추가 서류/검수/지연 조건</li>
+</ul>
+</div>
+<div class="card">
+<h3>한 번에 복사해서 쓰는 “10초 점검 템플릿”</h3>
+<p>아래 템플릿을 그대로 복사해서, 문의/확인할 때 체크박스로 쓰면 실수가 확 줄어듭니다.</p>
+<div class="copybar">
+<button class="copybtn" id="copyChecklist" type="button">체크리스트 복사</button>
+<div class="copynote" id="copyNote">클릭하면 텍스트가 복사됩니다.</div>
+</div>
+</div>
+</div>
+<div class="checklist" id="checklist">
+<div class="check"><div class="dot">1</div><div><b>롤링(요구 배팅)</b><span>몇 배? 적용 게임? 롤링 산정 방식(스포츠/카지노/슬롯) 확인</span></div></div>
+<div class="check"><div class="dot">2</div><div><b>제외/제한 게임</b><span>특정 슬롯, 미니게임, 특정 배당/특정 리그 제외 여부</span></div></div>
+<div class="check"><div class="dot">3</div><div><b>최대 지급/상한</b><span>보너스 최대지급, 최대환수, 최대출금, 배당/배팅 한도 제한</span></div></div>
+<div class="check"><div class="dot">4</div><div><b>유효기간/소멸</b><span>지급 후 몇 시간/몇 일 내 사용? 미사용 시 소멸? 일일 횟수 제한?</span></div></div>
+<div class="check"><div class="dot">5</div><div><b>출금/검수 조건</b><span>출금 지연 기준, 추가 서류/인증 요구, 규정 위반 시 환수 조건</span></div></div>
+</div>
+<div aria-label="안내" class="disclaimer-box" role="note">
+<strong>안내</strong>
+<p>본 페이지는 특정 서비스/브랜드의 공식 페이지가 아니며, 보너스 조건을 이해하고 점검하는 데 도움을 주는 가이드 페이지입니다.</p>
+</div>
+</div>
+<div class="section">
+<h2>함께 쓰면 좋은 도구</h2>
+<p style="margin:0;color:rgba(232,232,238,.72);">입플 조건은 “문구”보다 실제 체감이 중요합니다. 배당/확률/기대값을 숫자로 확인해보세요.</p>
+<div class="tools">
+<a class="tool" href="/tool-odds/?from=bonus_tools">
+<div class="t">확률↔배당 변환기</div>
+<div class="d">확률 감각을 숫자로</div>
+</a>
+<a class="tool" href="/tool-margin/?from=bonus_tools">
+<div class="t">배당 마진 계산기</div>
+<div class="d">오버라운드로 불리함 점검</div>
+</a>
+<a class="tool" href="/tool-ev/?from=bonus_tools">
+<div class="t">EV 계산기</div>
+<div class="d">내 확률로 기대값 확인</div>
+</a>
+<a class="tool" href="/analysis/?from=bonus_tools">
+<div class="t">분석기</div>
+<div class="d">결과 저장/공유</div>
+</a>
+</div>
+</div>
+<div class="section faq" id="faq">
+<h2>자주 묻는 질문(FAQ)</h2>
+<details>
+<summary>입플사이트(입금플러스)에서 꼭 먼저 확인해야 할 조건은?</summary>
+<p>롤링(요구 배팅)·제외게임·최대지급·유효기간·출금/검수 조건 5가지만 먼저 확인해도 대부분의 실수를 줄일 수 있습니다.</p>
+</details>
+<details>
+<summary>카지노입플과 슬롯입플은 뭐가 다른가요?</summary>
+<p>적용 게임 범위와 롤링 산정, 제외 게임, 최대 지급 조건이 다를 수 있습니다. 같은 “입플”이라도 슬롯/테이블/라이브 여부에 따라 제한이 붙는 경우가 많습니다.</p>
+</details>
+<details>
+<summary>“최대 지급/환수”는 왜 중요하죠?</summary>
+<p>상한이 낮거나 환수 조건이 까다로우면, 보너스가 있어도 체감 이득이 거의 없을 수 있습니다. 특히 규정 위반 시 환수 기준을 미리 확인하는 게 중요합니다.</p>
+</details>
+<details>
+<summary>조건이 길면 어떻게 문의/확인해야 하나요?</summary>
+<p>이 페이지의 템플릿을 복사해 체크박스로 문의하면 빠르고 정확합니다. “롤링/제외/상한/기간/출금” 5개 항목을 기준으로 답을 받으세요.</p>
+</details>
+<details>
+<summary>배당/확률/EV 계산기는 여기랑 무슨 관계가 있나요?</summary>
+<p>보너스 조건을 확인해도, 실제 의사결정은 숫자(확률/기대값/마진)로 검증하는 게 가장 안정적입니다. 도구를 함께 쓰면 과신을 줄이고 판단이 빨라집니다.</p>
+</details>
+</div>
+<div class="footer">
       © 88 · 가이드/도구 제공 페이지
     </div>
-  </div>
-
-  <script>
+</div>
+<script>
 // ===== Page-specific UI + events =====
 (function(){
   const bar = document.getElementById('noticeBar');
@@ -651,10 +629,7 @@ a{ color:inherit; }
   });
 })();
 </script>
-
-
-
-  <script type="application/ld+json">
+<script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"FAQPage",
@@ -668,17 +643,17 @@ a{ color:inherit; }
   }
   </script>
 <section aria-label="관련 링크" class="rel-links">
-  <h2>관련 링크</h2>
-  <div class="rel-grid">
-    <a href="/" data-cta="rel_home">메인</a>
-    <a href="/#oddsAnalyzerSection" data-cta="rel_odds">배당 구조 분석기</a>
-    <a href="/tool-margin/" data-cta="rel_margin">마진 계산기</a>
-    <a href="/tool-ev/" data-cta="rel_ev">EV 계산기</a>
-    <a href="/tool-odds/" data-cta="rel_odds2">배당↔확률 변환</a>
-    <a href="/#vendorTop" data-cta="rel_vendors">보증·인증 업체</a>
-    <a href="/bonus-checklist/" data-cta="rel_bonus">입플 체크리스트</a>
-    <a href="/landing-a/" data-cta="rel_landing_a">입플·보너스 안내</a>
-  </div>
+<h2>관련 링크</h2>
+<div class="rel-grid">
+<a data-cta="rel_home" href="/">메인</a>
+<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
+<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
+<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
+<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
+<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
+<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
+</div>
 </section>
 <style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
@@ -686,7 +661,7 @@ a{ color:inherit; }
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
   .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
   .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:rgba(255,255,255,.82);font-size:12px;padding:8px 10px;border-radius:999px;
+  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
