--- a/landing-b/index.html
+++ b/landing-b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터</title>
-<meta name="description" content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요.">
-<link rel="canonical" href="https://88st.cloud/landing-b/">
-<meta name="robots" content="index,follow">
-
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="88 (팔팔커뮤니티)">
-<meta property="og:title" content="고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터">
-<meta property="og:description" content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요.">
-<meta property="og:url" content="https://88st.cloud/landing-b/">
-
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
+<meta content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요." name="description"/>
+<link href="https://88st.cloud/landing-b/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="고액 유저 기준 보증업체 검증 체크리스트 | 88 인증놀이터" property="og:title"/>
+<meta content="고액 유저 관점에서 보증업체/인증놀이터를 선택할 때 꼭 봐야 하는 체크리스트를 정리했습니다. 메인에서 검증 카드와 문의 채널을 빠르게 확인하세요." property="og:description"/>
+<meta content="https://88st.cloud/landing-b/" property="og:url"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <!-- GA4 -->
-
-
 <style>
 
 *{box-sizing:border-box;}
@@ -54,7 +50,7 @@ body{
     radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
     linear-gradient(180deg, #07070a, var(--bg));
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
-  color:#fff;
+  color:var(--text);
 }
 a{color:inherit;text-decoration:none;}
 .notice{
@@ -136,7 +132,7 @@ a{color:inherit;text-decoration:none;}
 }
 .faq details + details{margin-top:10px;}
 .faq summary{
-  cursor:pointer; font-weight:1000; color:#fff; list-style:none;
+  cursor:pointer; font-weight:1000; color:var(--text); list-style:none;
 }
 .faq summary::-webkit-details-marker{display:none;}
 .faq .a{margin-top:8px; color:#cfcfcf; font-size:13px; line-height:1.6;}
@@ -176,30 +172,29 @@ a{color:inherit;text-decoration:none;}
 }
 
 </style>
-<link rel="stylesheet" href="../assets/glass-notice.css">
-<script src="../assets/theme-preset.js" defer></script>
-
+<link href="../assets/glass-notice.css" rel="stylesheet"/>
+<script defer="" src="../assets/theme-preset.js"></script>
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
   /* unify accent (blue) */
-  --accent1:#5fb2ff !important;
-  --accent2:#a8dcff !important;
-  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
-  --accentText:#00121a !important;
-  --accentOn:#00121a !important;
+  --accent1:#5fb2ff;
+  --accent2:#a8dcff;
+  --accentRGB:95,178,255;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a;
+  --accentOn:#00121a;
 
   /* unify tokens */
-  --bg:#05060b !important;
-  --panel:rgba(12,14,22,.62) !important;
-  --glassA:.72 !important;
-  --glassStrongA:.86 !important;
-  --glassSoftA:.18 !important;
-  --glassBorder:rgba(255,255,255,.10) !important;
+  --bg:#05060b;
+  --panel:rgba(12,14,22,.62);
+  --glassA:.72;
+  --glassStrongA:.86;
+  --glassSoftA:.18;
+  --glassBorder:rgba(255,255,255,.10);
 
   /* backward compat */
-  --gold: var(--accent1) !important;
-  --gold2: var(--accent2) !important;
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
 }
 
 /* premium midnight background */
@@ -209,7 +204,7 @@ body{
     radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
     radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
     linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
-  color:#fff;
+  color:var(--text);
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
 }
 
@@ -230,7 +225,7 @@ h3 .badge{ display:none !important; }
 input, select, textarea{
   background: rgba(0,0,0,.28) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color:#fff !important;
+  color:var(--text) !important;
   border-radius:14px !important;
   outline:none;
 }
@@ -243,7 +238,7 @@ input:focus, select:focus, textarea:focus{
 .btn, button, a.btn{
   background: rgba(255,255,255,.06) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color: rgba(255,255,255,.92) !important;
+  color:var(--text) !important;
   box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
 }
 .btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
@@ -258,8 +253,6 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -280,112 +273,95 @@ a{ color:inherit; }
   ]
 }
 </script>
-
 <script src="/assets/js/88st-analytics.js"></script>
-<script src="/assets/js/vendor-teasers.js" defer></script>
-<link rel="stylesheet" href="/assets/vendor-teasers.css">
-
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
-<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
+<script defer="" src="/assets/js/vendor-teasers.js"></script>
+<link href="/assets/vendor-teasers.css" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
 </head>
 <body>
-  <div class="notice">
-    <a href="/?from=landing-b" data-utm="1" onclick="track('landing_notice_click',{landing:'b'})">🧾 고액 유저 검증 체크리스트 → 메인 ‘88 인증놀이터’에서 카드로 바로 확인</a>
-  </div>
-
-  <div class="wrap">
-    <div class="top">
-      <div class="brand">
-        <img class="logoImg" src="/img/logo.png" alt="88 로고" loading="lazy" decoding="async">
-        <div class="t">88st.cloud</div>
-      </div>
-      <div class="nav">
-        <a href="/" data-utm="1" onclick="track('landing_nav_home',{landing:'b'})">메인</a>
-        <a href="/analysis/" data-utm="1" onclick="track('landing_nav_analyzer',{landing:'b'})">분석기</a>
-        <a href="/#vendorTop" data-utm="1" onclick="track('landing_nav_vendor',{landing:'b'})">인증놀이터</a>
-      </div>
-    </div>
-
-    <div class="hero">
-      <h1 class="h1">고액 유저 기준 ‘보증업체/인증놀이터’ 검증 체크리스트</h1>
-      <div class="sub">광고 문구보다 ‘운영 이력·조건 명확성·문의 응대’가 중요합니다. 빠르게 체크하고 메인에서 카드별 안내를 확인하세요.</div>
-
-      <div class="pills">
-        <div class="pill">고액 유저 기준</div><div class="pill">검증 체크리스트</div><div class="pill">운영 이력</div><div class="pill">문의 채널</div><div class="pill">리스크 감소</div>
-      </div>
-
-      <div class="ctaRow">
-        <a class="btn primary" href="/analysis/" data-utm="1"
-           onclick="track('landing_cta_click',{landing:'b',cta:'analyzer'})">
+<div class="notice">
+<a data-utm="1" href="/?from=landing-b" onclick="track('landing_notice_click',{landing:'b'})">🧾 고액 유저 검증 체크리스트 → 메인 ‘88 인증놀이터’에서 카드로 바로 확인</a>
+</div>
+<div class="wrap">
+<div class="top">
+<div class="brand">
+<img alt="88 로고" class="logoImg" decoding="async" loading="lazy" src="/img/logo.png"/>
+<div class="t">88st.cloud</div>
+</div>
+<div class="nav">
+<a data-utm="1" href="/" onclick="track('landing_nav_home',{landing:'b'})">메인</a>
+<a data-utm="1" href="/analysis/" onclick="track('landing_nav_analyzer',{landing:'b'})">분석기</a>
+<a data-utm="1" href="/#vendorTop" onclick="track('landing_nav_vendor',{landing:'b'})">인증놀이터</a>
+</div>
+</div>
+<div class="hero">
+<h1 class="h1">고액 유저 기준 ‘보증업체/인증놀이터’ 검증 체크리스트</h1>
+<div class="sub">광고 문구보다 ‘운영 이력·조건 명확성·문의 응대’가 중요합니다. 빠르게 체크하고 메인에서 카드별 안내를 확인하세요.</div>
+<div class="pills">
+<div class="pill">고액 유저 기준</div><div class="pill">검증 체크리스트</div><div class="pill">운영 이력</div><div class="pill">문의 채널</div><div class="pill">리스크 감소</div>
+</div>
+<div class="ctaRow">
+<a class="btn primary" data-utm="1" href="/analysis/" onclick="track('landing_cta_click',{landing:'b',cta:'analyzer'})">
            무료 분석기 사용하기
         </a>
-        <a class="btn secondary" href="/#vendorTop" data-utm="1"
-           onclick="track('landing_cta_click',{landing:'b',cta:'vendor'})">
+<a class="btn secondary" data-utm="1" href="/#vendorTop" onclick="track('landing_cta_click',{landing:'b',cta:'vendor'})">
            88 인증놀이터 바로보기
         </a>
-      </div>
-      <div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
-    </div>
-
-        <div class="vendor-teaser" id="vendorTeaser" aria-label="인증 업체 빠른보기"
-      data-vt-fixed="1,2,3,4" data-vt-pool="10,11,8,7" data-vt-pick="2">
-      <div class="vt-head">
-        <div>
-          <div class="vt-title">인증 업체 빠른보기</div>
-          <div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-        </div>
-        <div class="badge">보증·인증</div>
-      </div>
-
-      <div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-      <div class="vendor-grid" data-vt-grid="fixed"></div>
-
-      <div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-      <div class="vendor-grid" data-vt-grid="rot"></div>
-
-      <div class="vt-actions">
-        <a href="/#vendorTop" data-utm="1" data-cta="vendor_teaser_all">전체 혜택/공지 보기</a>
-        <a class="primary" href="/analysis/" data-utm="1" data-cta="vendor_teaser_to_analysis">분석기 바로가기</a>
-      </div>
-    </div>
-
-
-    <div class="section">
-      <div class="title">핵심 요약</div>
-      <div class="content">보증업체/인증놀이터 선택에서 가장 큰 리스크는 ‘정보 비대칭’입니다. 고액 유저일수록 작은 조건 차이가 실제 체감(환전 속도·한도·응대 품질)에 크게 영향을 줍니다. 그래서 광고 문구보다 <b>운영 이력</b>, <b>조건의 명확성</b>, <b>문의/대응 라인 고정</b>을 우선으로 봐야 합니다. 88은 커뮤니티 피드백과 운영 히스토리를 기반으로 ‘불필요한 변동(조건 변경, 공지 불명확)’이 잦은 곳을 보수적으로 걸러내고, 카드 클릭 한 번으로 가입코드·혜택·주의사항·문의 채널을 즉시 확인하도록 구성했습니다. 아래 체크리스트를 먼저 보고, 메인에서 카드별 상세 안내를 확인하세요.</div>
-      <ul class="ul">
-        <li>운영 안정성: 장기 운영/커뮤니티 피드백/이슈 대응 이력</li><li>조건 명확성: 입플·페이백·출금 조건이 구체적으로 안내되는지</li><li>고액 동선: 환전/출금 속도, 한도, 절차(본인확인 등) 체크</li><li>문의 채널: 공식 텔레그램 1개로 고정인지(사칭 위험 감소)</li><li>이상 징후: 조건 변경이 잦거나 공지가 불명확하면 보수적으로</li>
-      </ul>
-    </div>
-
-    <div class="section faq">
-      <div class="title">FAQ</div>
-      <details><summary>‘보증’이라는 단어만 믿어도 되나요?</summary><div class='a'>아니요. 핵심은 <b>운영 이력</b>과 <b>조건 명확성</b>입니다. 이름보다 실사용 기준으로 체크하세요.</div></details><details><summary>사칭/가짜 관리자 구분은?</summary><div class='a'>공식 문의 채널을 <b>한 곳으로 고정</b>하고, 메인 공지에 안내된 아이디만 사용하세요.</div></details><details><summary>카드에 없는 업체도 문의 가능한가요?</summary><div class='a'>가능합니다. 다만 검증 기준을 통과하지 못하면 메인 목록에는 반영되지 않을 수 있습니다.</div></details><details><summary>고액 유저가 가장 많이 실수하는 포인트는?</summary><div class='a'>혜택 문구만 보고 들어가서 <b>출금/환전 조건</b>을 늦게 확인하는 경우가 많습니다. 먼저 조건부터 보세요.</div></details>
-    </div>
-
-    <div class="footer">
-      <div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
-      <div class="smallLinks">
-        <a href="/landing-a/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'a'})">입플·보너스</a>
-        <a href="/landing-b/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'b'})">고액/보증업체</a>
-        <a href="/landing-c/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'c'})">마진·EV</a>
-        <a href="/landing-d/" data-utm="1" onclick="track('landing_cross',{from:'b',to:'d'})">배당 흐름</a>
-      </div>
-    </div>
-  </div>
-<script src="../assets/glass-notice.js" defer></script>
+</div>
+<div class="note">※ 본 페이지는 참고용 안내이며, 결과/수익을 보장하지 않습니다. 과도한 이용은 지양하세요.</div>
+</div>
+<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
+<div class="vt-head">
+<div>
+<div class="vt-title">인증 업체 빠른보기</div>
+<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
+</div>
+<div class="badge">보증·인증</div>
+</div>
+<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
+<div class="vendor-grid" data-vt-grid="fixed"></div>
+<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
+<div class="vendor-grid" data-vt-grid="rot"></div>
+<div class="vt-actions">
+<a data-cta="vendor_teaser_all" data-utm="1" href="/#vendorTop">전체 혜택/공지 보기</a>
+<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
+</div>
+</div>
+<div class="section">
+<div class="title">핵심 요약</div>
+<div class="content">보증업체/인증놀이터 선택에서 가장 큰 리스크는 ‘정보 비대칭’입니다. 고액 유저일수록 작은 조건 차이가 실제 체감(환전 속도·한도·응대 품질)에 크게 영향을 줍니다. 그래서 광고 문구보다 <b>운영 이력</b>, <b>조건의 명확성</b>, <b>문의/대응 라인 고정</b>을 우선으로 봐야 합니다. 88은 커뮤니티 피드백과 운영 히스토리를 기반으로 ‘불필요한 변동(조건 변경, 공지 불명확)’이 잦은 곳을 보수적으로 걸러내고, 카드 클릭 한 번으로 가입코드·혜택·주의사항·문의 채널을 즉시 확인하도록 구성했습니다. 아래 체크리스트를 먼저 보고, 메인에서 카드별 상세 안내를 확인하세요.</div>
+<ul class="ul">
+<li>운영 안정성: 장기 운영/커뮤니티 피드백/이슈 대응 이력</li><li>조건 명확성: 입플·페이백·출금 조건이 구체적으로 안내되는지</li><li>고액 동선: 환전/출금 속도, 한도, 절차(본인확인 등) 체크</li><li>문의 채널: 공식 텔레그램 1개로 고정인지(사칭 위험 감소)</li><li>이상 징후: 조건 변경이 잦거나 공지가 불명확하면 보수적으로</li>
+</ul>
+</div>
+<div class="section faq">
+<div class="title">FAQ</div>
+<details><summary>‘보증’이라는 단어만 믿어도 되나요?</summary><div class="a">아니요. 핵심은 <b>운영 이력</b>과 <b>조건 명확성</b>입니다. 이름보다 실사용 기준으로 체크하세요.</div></details><details><summary>사칭/가짜 관리자 구분은?</summary><div class="a">공식 문의 채널을 <b>한 곳으로 고정</b>하고, 메인 공지에 안내된 아이디만 사용하세요.</div></details><details><summary>카드에 없는 업체도 문의 가능한가요?</summary><div class="a">가능합니다. 다만 검증 기준을 통과하지 못하면 메인 목록에는 반영되지 않을 수 있습니다.</div></details><details><summary>고액 유저가 가장 많이 실수하는 포인트는?</summary><div class="a">혜택 문구만 보고 들어가서 <b>출금/환전 조건</b>을 늦게 확인하는 경우가 많습니다. 먼저 조건부터 보세요.</div></details>
+</div>
+<div class="footer">
+<div>© 88 (팔팔커뮤니티) · 88st.cloud</div>
+<div class="smallLinks">
+<a data-utm="1" href="/landing-a/" onclick="track('landing_cross',{from:'b',to:'a'})">입플·보너스</a>
+<a data-utm="1" href="/landing-b/" onclick="track('landing_cross',{from:'b',to:'b'})">고액/보증업체</a>
+<a data-utm="1" href="/landing-c/" onclick="track('landing_cross',{from:'b',to:'c'})">마진·EV</a>
+<a data-utm="1" href="/landing-d/" onclick="track('landing_cross',{from:'b',to:'d'})">배당 흐름</a>
+</div>
+</div>
+</div>
+<script defer="" src="../assets/glass-notice.js"></script>
 <section aria-label="관련 링크" class="rel-links">
-  <h2>관련 링크</h2>
-  <div class="rel-grid">
-    <a href="/" data-cta="rel_home">메인</a>
-    <a href="/#oddsAnalyzerSection" data-cta="rel_odds">배당 구조 분석기</a>
-    <a href="/tool-margin/" data-cta="rel_margin">마진 계산기</a>
-    <a href="/tool-ev/" data-cta="rel_ev">EV 계산기</a>
-    <a href="/tool-odds/" data-cta="rel_odds2">배당↔확률 변환</a>
-    <a href="/#vendorTop" data-cta="rel_vendors">보증·인증 업체</a>
-    <a href="/bonus-checklist/" data-cta="rel_bonus">입플 체크리스트</a>
-    <a href="/landing-a/" data-cta="rel_landing_a">입플·보너스 안내</a>
-  </div>
+<h2>관련 링크</h2>
+<div class="rel-grid">
+<a data-cta="rel_home" href="/">메인</a>
+<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
+<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
+<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
+<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
+<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
+<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
+</div>
 </section>
 <style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
@@ -393,7 +369,7 @@ a{ color:inherit; }
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
   .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
   .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:rgba(255,255,255,.82);font-size:12px;padding:8px 10px;border-radius:999px;
+  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
