--- a/minigame/index.html
+++ b/minigame/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>동행 파워볼·키노사다리·동키노 가이드 | 입플·주의사항 | 88</title>
-<meta name="description" content="동행 파워볼/키노사다리/동키노 유저를 위한 기본 용어, 입플 조건, 롤링·제한·유의사항을 정리했습니다. 고액 유저 기준 검증 포인트와 문의 가이드를 제공합니다." />
-<link rel="canonical" href="https://88st.cloud/minigame/" />
-<meta name="robots" content="index,follow" />
-
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="88 커뮤니티" />
-<meta property="og:title" content="동행 미니게임 가이드 | 입플·주의사항 | 88" />
-<meta property="og:description" content="파워볼/키노사다리/동키노 유저가 많이 묻는 조건·주의사항 정리." />
-<meta property="og:url" content="https://88st.cloud/minigame/" />
-
-<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
+<meta content="동행 파워볼/키노사다리/동키노 유저를 위한 기본 용어, 입플 조건, 롤링·제한·유의사항을 정리했습니다. 고액 유저 기준 검증 포인트와 문의 가이드를 제공합니다." name="description"/>
+<link href="https://88st.cloud/minigame/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 커뮤니티" property="og:site_name"/>
+<meta content="동행 미니게임 가이드 | 입플·주의사항 | 88" property="og:title"/>
+<meta content="파워볼/키노사다리/동키노 유저가 많이 묻는 조건·주의사항 정리." property="og:description"/>
+<meta content="https://88st.cloud/minigame/" property="og:url"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <style>
 *{box-sizing:border-box}
 :root{
@@ -41,7 +38,7 @@
 --muted:#cfcfcf; --ok:#b7ffcf; --bad:#ffb3b3;
 }
 body{
-  margin:0; font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui; color:#fff;
+  margin:0; font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui; color:var(--text);
   background:
     radial-gradient(1200px 500px at 50% -10%, rgba(var(--accentRGB),.14), transparent 55%),
     radial-gradient(900px 500px at 10% 20%, rgba(90,160,255,.08), transparent 60%),
@@ -98,10 +95,10 @@ body{
 .btn{flex:1;min-width:160px;padding:12px;border-radius:14px;border:none;font-weight:900;cursor:pointer;text-decoration:none;text-align:center}
 .btn.gold{background:linear-gradient(135deg,var(--gold),var(--gold2));color:#111}
 .btn.blue{background:linear-gradient(135deg,#1da1f2,#78d6ff);color:#00121a}
-.btn.dark{background:#1f1f1f;color:#fff;border:1px solid rgba(255,255,255,.08)}
+.btn.dark{background:#1f1f1f;color:var(--text);border:1px solid rgba(255,255,255,.08)}
 .faq details{border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.28);border-radius:14px;padding:10px 12px}
 .faq details + details{margin-top:10px}
-.faq summary{cursor:pointer;font-weight:900;color:#fff;list-style:none}
+.faq summary{cursor:pointer;font-weight:900;color:var(--text);list-style:none}
 .faq summary::-webkit-details-marker{display:none}
 .faq .a{margin-top:8px;color:#cfcfcf;font-size:13px;line-height:1.55}
 .footer{text-align:center;color:#9a9a9a;font-size:12px;padding:18px 14px 26px}
@@ -124,30 +121,29 @@ small.muted{color:#9a9a9a}
 }
 
 </style>
-<link rel="stylesheet" href="../assets/glass-notice.css">
-<script src="../assets/theme-preset.js" defer></script>
-
+<link href="../assets/glass-notice.css" rel="stylesheet"/>
+<script defer="" src="../assets/theme-preset.js"></script>
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
   /* unify accent (blue) */
-  --accent1:#5fb2ff !important;
-  --accent2:#a8dcff !important;
-  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
-  --accentText:#00121a !important;
-  --accentOn:#00121a !important;
+  --accent1:#5fb2ff;
+  --accent2:#a8dcff;
+  --accentRGB:95,178,255;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a;
+  --accentOn:#00121a;
 
   /* unify tokens */
-  --bg:#05060b !important;
-  --panel:rgba(12,14,22,.62) !important;
-  --glassA:.72 !important;
-  --glassStrongA:.86 !important;
-  --glassSoftA:.18 !important;
-  --glassBorder:rgba(255,255,255,.10) !important;
+  --bg:#05060b;
+  --panel:rgba(12,14,22,.62);
+  --glassA:.72;
+  --glassStrongA:.86;
+  --glassSoftA:.18;
+  --glassBorder:rgba(255,255,255,.10);
 
   /* backward compat */
-  --gold: var(--accent1) !important;
-  --gold2: var(--accent2) !important;
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
 }
 
 /* premium midnight background */
@@ -157,7 +153,7 @@ body{
     radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
     radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
     linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
-  color:#fff;
+  color:var(--text);
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
 }
 
@@ -178,7 +174,7 @@ h3 .badge{ display:none !important; }
 input, select, textarea{
   background: rgba(0,0,0,.28) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color:#fff !important;
+  color:var(--text) !important;
   border-radius:14px !important;
   outline:none;
 }
@@ -191,7 +187,7 @@ input:focus, select:focus, textarea:focus{
 .btn, button, a.btn{
   background: rgba(255,255,255,.06) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color: rgba(255,255,255,.92) !important;
+  color:var(--text) !important;
   box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
 }
 .btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
@@ -206,8 +202,6 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -228,130 +222,110 @@ a{ color:inherit; }
   ]
 }
 </script>
-
 <script src="/assets/js/88st-analytics.js"></script>
-
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
-<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
+<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
 </head>
-
 <body>
 <div class="notice-bar">
-  <a href="https://t.me/UZU59" target="_blank" rel="noopener"><span id="noticeText"></span></a>
+<a href="https://t.me/UZU59" rel="noopener" target="_blank"><span id="noticeText"></span></a>
 </div>
-
 <div id="loader">
-  <div class="logoWrap"><img class="logoImg" src="/img/logo.png" alt="88 로고 로딩"></div>
-  <div class="text">Loading...</div>
+<div class="logoWrap"><img alt="88 로고 로딩" class="logoImg" src="/img/logo.png"/></div>
+<div class="text">Loading...</div>
 </div>
-
 <div class="scam-popup" id="scamPopup">
-  <div class="scam-box">
-    <h3>⚠️ 사칭 주의 안내</h3>
-    <p>
-      88 커뮤니티 공식 관리자 텔레그램은<br>
-      <b>@UZU59</b> 단 하나입니다.<br><br>
-      그 외 계정은 사칭일 수 있으니<br>
+<div class="scam-box">
+<h3>⚠️ 사칭 주의 안내</h3>
+<p>
+      88 커뮤니티 공식 관리자 텔레그램은<br/>
+<b>@UZU59</b> 단 하나입니다.<br/><br/>
+      그 외 계정은 사칭일 수 있으니<br/>
       반드시 주의해 주세요.
     </p>
-    <div class="btn" onclick="closeScam()">확인</div>
-  </div>
+<div class="btn" onclick="closeScam()">확인</div>
 </div>
-
+</div>
 <div class="header">
-  <div class="nav">
-    <a href="../">메인</a>
-    <a href="../analysis.html">분석기</a>
-    <a href="../ipl/">입플/보너스</a>
-    <a class="active" href="./">동행 미니게임</a>
-    <a href="../casino/">카지노</a>
-    <a href="../slot/">슬롯</a>
-  </div>
-
-  <a class="logoLink" href="../" aria-label="홈으로 이동">
-    <img class="logoImg" src="/img/logo.png" alt="88 커뮤니티 로고">
-  </a>
-  <div class="sub">
-    <b>동행 미니게임(파워볼·키노사다리·동키노)</b> 유저가 자주 묻는 조건/주의사항을 정리했습니다.<br>
-    <small class="muted">※ 과몰입/무리한 베팅은 금물 — 리스크 관리 중심 안내.</small>
-  </div>
+<div class="nav">
+<a href="../">메인</a>
+<a href="../analysis.html">분석기</a>
+<a href="../ipl/">입플/보너스</a>
+<a class="active" href="./">동행 미니게임</a>
+<a href="../casino/">카지노</a>
+<a href="../slot/">슬롯</a>
 </div>
-
+<a aria-label="홈으로 이동" class="logoLink" href="../">
+<img alt="88 커뮤니티 로고" class="logoImg" src="/img/logo.png"/>
+</a>
+<div class="sub">
+<b>동행 미니게임(파워볼·키노사다리·동키노)</b> 유저가 자주 묻는 조건/주의사항을 정리했습니다.<br/>
+<small class="muted">※ 과몰입/무리한 베팅은 금물 — 리스크 관리 중심 안내.</small>
+</div>
+</div>
 <div class="wrap">
-  <div class="grid2">
-    <div class="card">
-      <div class="title"><span class="badge">START</span>초보 3분 요약</div>
-      <ul class="list">
-        <li>입플/보너스는 <b>롤링·제한·환전조건</b>을 먼저 확인</li>
-        <li>소액 테스트 → 문제 없을 때만 단계적 증액</li>
-        <li>사칭/가짜 문의처 주의: <b>@UZU59</b> 단일</li>
-      </ul>
-
-      <div class="title" style="margin-top:12px;"><span class="badge">CHECK</span>미니게임 체크리스트 (핵심 6)</div>
-      <ul class="list">
-        <li>미니게임이 <b>보너스 롤링에 포함</b>되는지</li>
-        <li>특정 회차/패턴을 이유로 <b>제한</b>되는지</li>
-        <li>환전 최소/최대, 1일 횟수 제한</li>
-        <li>보너스 중복 참여/연속 참여 제한</li>
-        <li>규정 위반 시 보너스 회수 조건</li>
-        <li>문의 대응 속도/처리 기록</li>
-      </ul>
-
-      <div class="btnRow">
-        <a class="btn blue" href="../analysis.html">배당·마진·EV 분석기</a>
-        <a class="btn gold" href="https://t.me/UZU59" target="_blank" rel="noopener">조건/문의(텔레그램)</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="title"><span class="badge">SAFE</span>주의해야 할 신호</div>
-      <div class="callout">
-        <div class="kv"><div class="k">규정이 자주 바뀜</div><div class="v bad">주의</div></div>
-        <div class="kv"><div class="k">환전조건/제한 안내가 불명확</div><div class="v bad">주의</div></div>
-        <div class="kv"><div class="k">문의처가 여러 개</div><div class="v bad">사칭 가능</div></div>
-        <div class="kv"><div class="k">규정 캡처/근거 제시 가능</div><div class="v ok">안정</div></div>
-      </div>
-
-      <div class="title" style="margin-top:12px;"><span class="badge">PRO</span>고액 유저 관점</div>
-      <ul class="list">
-        <li>“이벤트 크기”보다 <b>정산/대응</b>이 중요</li>
-        <li>조건이 투명하면 장기 체류가 늘어남</li>
-        <li>불필요한 규정 리스크를 줄이는 게 핵심</li>
-      </ul>
-
-      <div class="callout text">
-        <b>팁:</b> 미니게임은 변동성이 큽니다. <b>베팅 비중</b>을 낮게 시작하는 게 안정적이에요.
-      </div>
-    </div>
-  </div>
-
-  <div class="card faq" style="margin-top:14px;">
-    <div class="title"><span class="badge">FAQ</span>자주 묻는 질문 (동행 미니게임)</div>
-
-    <details open>
-      <summary>입플이 미니게임에도 적용되나요?</summary>
-      <div class="a">업체마다 다릅니다. <b>미니게임 포함/제외</b> 여부와 롤링 규정을 꼭 확인하세요.</div>
-    </details>
-
-    <details>
-      <summary>환전 제한이 생기는 대표적인 이유는?</summary>
-      <div class="a">규정 위반, 제한 게임 이용, 조건 미충족, 안내된 상한 초과 등으로 제한될 수 있어요.</div>
-    </details>
-
-    <details>
-      <summary>공식 문의처는 어디인가요?</summary>
-      <div class="a">공식 문의 텔레그램은 <b>@UZU59</b> 단 하나입니다.</div>
-    </details>
-
-    <details>
-      <summary>분석기는 미니게임에도 도움이 되나요?</summary>
-      <div class="a">분석기는 주로 <b>배당/확률/마진/EV</b> 구조를 보는 도구라 스포츠에 최적화되어 있습니다. 다만 “수수료/불리함” 감각을 익히는 데는 도움됩니다.</div>
-    </details>
-  </div>
-
-  <div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
+<div class="grid2">
+<div class="card">
+<div class="title"><span class="badge">START</span>초보 3분 요약</div>
+<ul class="list">
+<li>입플/보너스는 <b>롤링·제한·환전조건</b>을 먼저 확인</li>
+<li>소액 테스트 → 문제 없을 때만 단계적 증액</li>
+<li>사칭/가짜 문의처 주의: <b>@UZU59</b> 단일</li>
+</ul>
+<div class="title" style="margin-top:12px;"><span class="badge">CHECK</span>미니게임 체크리스트 (핵심 6)</div>
+<ul class="list">
+<li>미니게임이 <b>보너스 롤링에 포함</b>되는지</li>
+<li>특정 회차/패턴을 이유로 <b>제한</b>되는지</li>
+<li>환전 최소/최대, 1일 횟수 제한</li>
+<li>보너스 중복 참여/연속 참여 제한</li>
+<li>규정 위반 시 보너스 회수 조건</li>
+<li>문의 대응 속도/처리 기록</li>
+</ul>
+<div class="btnRow">
+<a class="btn blue" href="../analysis.html">배당·마진·EV 분석기</a>
+<a class="btn gold" href="https://t.me/UZU59" rel="noopener" target="_blank">조건/문의(텔레그램)</a>
 </div>
-
+</div>
+<div class="card">
+<div class="title"><span class="badge">SAFE</span>주의해야 할 신호</div>
+<div class="callout">
+<div class="kv"><div class="k">규정이 자주 바뀜</div><div class="v bad">주의</div></div>
+<div class="kv"><div class="k">환전조건/제한 안내가 불명확</div><div class="v bad">주의</div></div>
+<div class="kv"><div class="k">문의처가 여러 개</div><div class="v bad">사칭 가능</div></div>
+<div class="kv"><div class="k">규정 캡처/근거 제시 가능</div><div class="v ok">안정</div></div>
+</div>
+<div class="title" style="margin-top:12px;"><span class="badge">PRO</span>고액 유저 관점</div>
+<ul class="list">
+<li>“이벤트 크기”보다 <b>정산/대응</b>이 중요</li>
+<li>조건이 투명하면 장기 체류가 늘어남</li>
+<li>불필요한 규정 리스크를 줄이는 게 핵심</li>
+</ul>
+<div class="callout text">
+<b>팁:</b> 미니게임은 변동성이 큽니다. <b>베팅 비중</b>을 낮게 시작하는 게 안정적이에요.
+      </div>
+</div>
+</div>
+<div class="card faq" style="margin-top:14px;">
+<div class="title"><span class="badge">FAQ</span>자주 묻는 질문 (동행 미니게임)</div>
+<details open="">
+<summary>입플이 미니게임에도 적용되나요?</summary>
+<div class="a">업체마다 다릅니다. <b>미니게임 포함/제외</b> 여부와 롤링 규정을 꼭 확인하세요.</div>
+</details>
+<details>
+<summary>환전 제한이 생기는 대표적인 이유는?</summary>
+<div class="a">규정 위반, 제한 게임 이용, 조건 미충족, 안내된 상한 초과 등으로 제한될 수 있어요.</div>
+</details>
+<details>
+<summary>공식 문의처는 어디인가요?</summary>
+<div class="a">공식 문의 텔레그램은 <b>@UZU59</b> 단 하나입니다.</div>
+</details>
+<details>
+<summary>분석기는 미니게임에도 도움이 되나요?</summary>
+<div class="a">분석기는 주로 <b>배당/확률/마진/EV</b> 구조를 보는 도구라 스포츠에 최적화되어 있습니다. 다만 “수수료/불리함” 감각을 익히는 데는 도움됩니다.</div>
+</details>
+</div>
+<div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
+</div>
 <script>
 function hideLoader(){
   const l=document.getElementById("loader");
@@ -393,19 +367,19 @@ function rotateNotice(){
 rotateNotice();
 setInterval(rotateNotice,4200);
 </script>
-<script src="../assets/glass-notice.js" defer></script>
+<script defer="" src="../assets/glass-notice.js"></script>
 <section aria-label="관련 링크" class="rel-links">
-  <h2>관련 링크</h2>
-  <div class="rel-grid">
-    <a href="/" data-cta="rel_home">메인</a>
-    <a href="/#oddsAnalyzerSection" data-cta="rel_odds">배당 구조 분석기</a>
-    <a href="/tool-margin/" data-cta="rel_margin">마진 계산기</a>
-    <a href="/tool-ev/" data-cta="rel_ev">EV 계산기</a>
-    <a href="/tool-odds/" data-cta="rel_odds2">배당↔확률 변환</a>
-    <a href="/#vendorTop" data-cta="rel_vendors">보증·인증 업체</a>
-    <a href="/bonus-checklist/" data-cta="rel_bonus">입플 체크리스트</a>
-    <a href="/landing-a/" data-cta="rel_landing_a">입플·보너스 안내</a>
-  </div>
+<h2>관련 링크</h2>
+<div class="rel-grid">
+<a data-cta="rel_home" href="/">메인</a>
+<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
+<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
+<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
+<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
+<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
+<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
+</div>
 </section>
 <style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
@@ -413,7 +387,7 @@ setInterval(rotateNotice,4200);
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
   .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
   .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:rgba(255,255,255,.82);font-size:12px;padding:8px 10px;border-radius:999px;
+  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
