--- a/tool/ev/index.html
+++ b/tool/ev/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>EV(+EV) 계산기 | 88st.cloud</title>
-<meta name="description" content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다.">
-<link rel="canonical" href="https://88st.cloud/tool/ev/">
-<meta name="robots" content="index,follow">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="88 (팔팔커뮤니티)">
-<meta property="og:title" content="EV(+EV) 계산기 | 88st.cloud">
-<meta property="og:description" content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다.">
-<meta property="og:url" content="https://88st.cloud/tool/ev/">
+<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." name="description"/>
+<link href="https://88st.cloud/tool/ev/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="EV(+EV) 계산기 | 88st.cloud" property="og:title"/>
+<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." property="og:description"/>
+<meta content="https://88st.cloud/tool/ev/" property="og:url"/>
 <style>
 :root{
   /* Theme (auto/preset) */
@@ -81,7 +82,7 @@ input, select{
   user-select:none;
 }
 .btn.secondary{ background:rgba(255,255,255,.05); border:1px solid var(--border); color:var(--text); }
-.out{ margin-top:10px; color:rgba(255,255,255,.86); font-size:13px; line-height:1.6; }
+.out{ margin-top:10px; color:var(--text-2); font-size:13px; line-height:1.6; }
 .kv{ display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:10px; }
 @media(max-width:720px){ .kv{ grid-template-columns:1fr; } }
 .kv .item{ border:1px solid rgba(255,255,255,.08); background:rgba(0,0,0,.18); border-radius:18px; padding:12px; }
@@ -92,8 +93,8 @@ input, select{
 .faq details:first-child{ border-top:none; }
 .faq summary{ cursor:pointer; list-style:none; font-weight:1000; }
 .faq summary::-webkit-details-marker{ display:none; }
-footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-height:1.6; }
-.small{ font-size:12px; color:rgba(255,255,255,.55); }
+footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; }
+.small{ font-size:12px; color:var(--muted-2); }
 
 
 /* 88 logo spotlight */
@@ -113,29 +114,28 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
 
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
-<script src="../assets/theme-preset.js" defer></script>
-
+<script defer="" src="../assets/theme-preset.js"></script>
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
 :root{
   /* unify accent (blue) */
-  --accent1:#5fb2ff !important;
-  --accent2:#a8dcff !important;
-  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
-  --accentText:#00121a !important;
-  --accentOn:#00121a !important;
+  --accent1:#5fb2ff;
+  --accent2:#a8dcff;
+  --accentRGB:95,178,255;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a;
+  --accentOn:#00121a;
 
   /* unify tokens */
-  --bg:#05060b !important;
-  --panel:rgba(12,14,22,.62) !important;
-  --glassA:.72 !important;
-  --glassStrongA:.86 !important;
-  --glassSoftA:.18 !important;
-  --glassBorder:rgba(255,255,255,.10) !important;
+  --bg:#05060b;
+  --panel:rgba(12,14,22,.62);
+  --glassA:.72;
+  --glassStrongA:.86;
+  --glassSoftA:.18;
+  --glassBorder:rgba(255,255,255,.10);
 
   /* backward compat */
-  --gold: var(--accent1) !important;
-  --gold2: var(--accent2) !important;
+  --gold: var(--accent1);
+  --gold2: var(--accent2);
 }
 
 /* premium midnight background */
@@ -145,7 +145,7 @@ body{
     radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
     radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
     linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
-  color:#fff;
+  color:var(--text);
   font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
 }
 
@@ -166,7 +166,7 @@ h3 .badge{ display:none !important; }
 input, select, textarea{
   background: rgba(0,0,0,.28) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color:#fff !important;
+  color:var(--text) !important;
   border-radius:14px !important;
   outline:none;
 }
@@ -179,7 +179,7 @@ input:focus, select:focus, textarea:focus{
 .btn, button, a.btn{
   background: rgba(255,255,255,.06) !important;
   border:1px solid rgba(255,255,255,.14) !important;
-  color: rgba(255,255,255,.92) !important;
+  color:var(--text) !important;
   box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
 }
 .btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
@@ -194,8 +194,6 @@ input:focus, select:focus, textarea:focus{
 /* links */
 a{ color:inherit; }
 </style>
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -216,70 +214,63 @@ a{ color:inherit; }
   ]
 }
 </script>
-
 <script src="/assets/js/88st-analytics.js"></script>
-<script src="/assets/js/vendor-teasers.js" defer></script>
-<link rel="stylesheet" href="/assets/vendor-teasers.css">
-
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
-<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
+<script defer="" src="/assets/js/vendor-teasers.js"></script>
+<link href="/assets/vendor-teasers.css" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
 </head>
 <body>
-  <div class="wrap">
-    <div class="topbar">
-      <div class="brand"><span class="badge">88</span> EV 계산기</div>
-      <div class="navlinks" aria-label="바로가기">
-        <a href="/" rel="home">홈</a>
-        <a href="/analysis/">분석기</a>
-        <a href="/tool-margin/">마진</a>
-        <a href="/tool-ev/">EV</a>
-        <a href="/tool-odds/">배당↔확률</a>
-      </div>
-    </div>
-
-    <div class="hero">
-      <h1>EV(+EV) 계산기</h1>
-      <p>배당과 내 추정 승률을 넣으면 손익분기점 대비 +EV / -EV 여부와 기대수익을 계산합니다.<br><span class="small">※ 정보 제공/참고용 · 결과를 보장하지 않습니다.</span></p>
-    </div>
-
-    
-<div class="grid">
-  <div class="card">
-    <h2>입력</h2>
-    <div class="row">
-      <div class="field">
-        <label for="odds">배당</label>
-        <input id="odds" inputmode="decimal" placeholder="예: 1.90" value="1.90">
-      </div>
-      <div class="field">
-        <label for="p">내 추정 승률(%)</label>
-        <input id="p" inputmode="decimal" placeholder="예: 55" value="55">
-      </div>
-      <div class="field">
-        <label for="stake">베팅 금액</label>
-        <input id="stake" inputmode="decimal" placeholder="예: 10000" value="10000">
-      </div>
-    </div>
-    <div class="btnrow">
-      <div class="btn" id="calcBtn">계산하기</div>
-      <div class="btn secondary" id="resetBtn">초기화</div>
-    </div>
-    <div class="out small">손익분기점(1/배당)과 비교해 +EV / -EV 여부를 확인합니다.</div>
-  </div>
-
-  <div class="card">
-    <h2>결과</h2>
-    <div class="kv">
-      <div class="item"><div class="k">손익분기점 승률</div><div class="v" id="be">-</div></div>
-      <div class="item"><div class="k">EV (금액)</div><div class="v" id="evAmt">-</div></div>
-      <div class="item"><div class="k">EV (수익률)</div><div class="v" id="evPct">-</div></div>
-      <div class="item"><div class="k">판정</div><div class="v" id="judge">-</div></div>
-    </div>
-    <div class="sep"></div>
-    <div class="small" id="explain"></div>
-  </div>
+<div class="wrap">
+<div class="topbar">
+<div class="brand"><span class="badge">88</span> EV 계산기</div>
+<div aria-label="바로가기" class="navlinks">
+<a href="/" rel="home">홈</a>
+<a href="/analysis/">분석기</a>
+<a href="/tool-margin/">마진</a>
+<a href="/tool-ev/">EV</a>
+<a href="/tool-odds/">배당↔확률</a>
 </div>
-
+</div>
+<div class="hero">
+<h1>EV(+EV) 계산기</h1>
+<p>배당과 내 추정 승률을 넣으면 손익분기점 대비 +EV / -EV 여부와 기대수익을 계산합니다.<br/><span class="small">※ 정보 제공/참고용 · 결과를 보장하지 않습니다.</span></p>
+</div>
+<div class="grid">
+<div class="card">
+<h2>입력</h2>
+<div class="row">
+<div class="field">
+<label for="odds">배당</label>
+<input id="odds" inputmode="decimal" placeholder="예: 1.90" value="1.90"/>
+</div>
+<div class="field">
+<label for="p">내 추정 승률(%)</label>
+<input id="p" inputmode="decimal" placeholder="예: 55" value="55"/>
+</div>
+<div class="field">
+<label for="stake">베팅 금액</label>
+<input id="stake" inputmode="decimal" placeholder="예: 10000" value="10000"/>
+</div>
+</div>
+<div class="btnrow">
+<div class="btn" id="calcBtn">계산하기</div>
+<div class="btn secondary" id="resetBtn">초기화</div>
+</div>
+<div class="out small">손익분기점(1/배당)과 비교해 +EV / -EV 여부를 확인합니다.</div>
+</div>
+<div class="card">
+<h2>결과</h2>
+<div class="kv">
+<div class="item"><div class="k">손익분기점 승률</div><div class="v" id="be">-</div></div>
+<div class="item"><div class="k">EV (금액)</div><div class="v" id="evAmt">-</div></div>
+<div class="item"><div class="k">EV (수익률)</div><div class="v" id="evPct">-</div></div>
+<div class="item"><div class="k">판정</div><div class="v" id="judge">-</div></div>
+</div>
+<div class="sep"></div>
+<div class="small" id="explain"></div>
+</div>
+</div>
 <script>
 function num(v){ const x=parseFloat(v); return (isFinite(x)) ? x : NaN; }
 function pct(x){ return (x*100).toFixed(2) + "%"; }
@@ -320,77 +311,64 @@ document.getElementById("resetBtn").addEventListener("click", ()=>{
 ["odds","p","stake"].forEach(id=> document.getElementById(id).addEventListener("input", ()=> calc()));
 calc();
 </script>
-
-
-        <div class="vendor-teaser" id="vendorTeaser" aria-label="인증 업체 빠른보기"
-      data-vt-fixed="1,2,3,4" data-vt-pool="10,11,8,7" data-vt-pick="2">
-      <div class="vt-head">
-        <div>
-          <div class="vt-title">인증 업체 빠른보기</div>
-          <div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-        </div>
-        <div class="badge">보증·인증</div>
-      </div>
-
-      <div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-      <div class="vendor-grid" data-vt-grid="fixed"></div>
-
-      <div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-      <div class="vendor-grid" data-vt-grid="rot"></div>
-
-      <div class="vt-actions">
-        <a href="/#vendorTop" data-utm="1" data-cta="vendor_teaser_all">전체 혜택/공지 보기</a>
-        <a class="primary" href="/analysis/" data-utm="1" data-cta="vendor_teaser_to_analysis">분석기 바로가기</a>
-      </div>
-    </div>
-
-
-    <div class="card" style="margin-top:12px;">
-      <h2>자주 묻는 질문(FAQ)</h2>
-      <div class="faq">
-      <details>
-        <summary>손익분기점 승률은 왜 1/배당인가요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정).</div>
-      </details>
-
-      <details>
-        <summary>+EV이면 무조건 이기나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다.</div>
-      </details>
-
-      <details>
-        <summary>추정 승률은 어떻게 잡나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다.</div>
-      </details>
-
-      <details>
-        <summary>마진(오버라운드)을 제거한 EV도 있나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다.</div>
-      </details>
-
-      <details>
-        <summary>추천 배팅 금액도 계산되나요?</summary>
-        <div class="small" style="margin-top:8px; line-height:1.6;">현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다.</div>
-      </details></div>
-    </div>
-
-    <footer>
-      <div>© 88 — Tools</div>
-      <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
-    </footer>
-  </div>
+<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
+<div class="vt-head">
+<div>
+<div class="vt-title">인증 업체 빠른보기</div>
+<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
+</div>
+<div class="badge">보증·인증</div>
+</div>
+<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
+<div class="vendor-grid" data-vt-grid="fixed"></div>
+<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
+<div class="vendor-grid" data-vt-grid="rot"></div>
+<div class="vt-actions">
+<a data-cta="vendor_teaser_all" data-utm="1" href="/#vendorTop">전체 혜택/공지 보기</a>
+<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
+</div>
+</div>
+<div class="card" style="margin-top:12px;">
+<h2>자주 묻는 질문(FAQ)</h2>
+<div class="faq">
+<details>
+<summary>손익분기점 승률은 왜 1/배당인가요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정).</div>
+</details>
+<details>
+<summary>+EV이면 무조건 이기나요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다.</div>
+</details>
+<details>
+<summary>추정 승률은 어떻게 잡나요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다.</div>
+</details>
+<details>
+<summary>마진(오버라운드)을 제거한 EV도 있나요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다.</div>
+</details>
+<details>
+<summary>추천 배팅 금액도 계산되나요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다.</div>
+</details></div>
+</div>
+<footer>
+<div>© 88 — Tools</div>
+<div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
+</footer>
+</div>
 <section aria-label="관련 링크" class="rel-links">
-  <h2>관련 링크</h2>
-  <div class="rel-grid">
-    <a href="/" data-cta="rel_home">메인</a>
-    <a href="/#oddsAnalyzerSection" data-cta="rel_odds">배당 구조 분석기</a>
-    <a href="/tool-margin/" data-cta="rel_margin">마진 계산기</a>
-    <a href="/tool-ev/" data-cta="rel_ev">EV 계산기</a>
-    <a href="/tool-odds/" data-cta="rel_odds2">배당↔확률 변환</a>
-    <a href="/#vendorTop" data-cta="rel_vendors">보증·인증 업체</a>
-    <a href="/bonus-checklist/" data-cta="rel_bonus">입플 체크리스트</a>
-    <a href="/landing-a/" data-cta="rel_landing_a">입플·보너스 안내</a>
-  </div>
+<h2>관련 링크</h2>
+<div class="rel-grid">
+<a data-cta="rel_home" href="/">메인</a>
+<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
+<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
+<a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
+<a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
+<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
+<a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
+</div>
 </section>
 <style>
   .rel-links{max-width:1080px;margin:26px auto 34px;padding:14px 14px 16px;border-radius:18px;
@@ -398,7 +376,7 @@ calc();
     box-shadow:0 14px 40px rgba(0,0,0,.35);}
   .rel-links h2{margin:0 0 10px;font-size:13px;letter-spacing:.02em;color:rgba(245,226,122,.92);font-weight:900;}
   .rel-grid{display:flex;flex-wrap:wrap;gap:8px;}
-  .rel-grid a{text-decoration:none;color:rgba(255,255,255,.82);font-size:12px;padding:8px 10px;border-radius:999px;
+  .rel-grid a{text-decoration:none;color:var(--text-2);font-size:12px;padding:8px 10px;border-radius:999px;
     border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);}
   .rel-grid a:hover{border-color:rgba(245,226,122,.25);color:rgba(245,226,122,.92);}
 </style>
