--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>켈리(Kelly) 비중 계산기 | 88st.cloud</title>
-<meta name="description" content="배당과 내 예상 확률을 입력하면 켈리 기준 베팅 비중을 계산합니다. 보수적 1/2·1/4 Kelly, 최대 비중 캡을 지원합니다.">
-<link rel="canonical" href="https://88st.cloud/tool/kelly/">
-<meta name="robots" content="index,follow">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="88 (팔팔커뮤니티)">
-<meta property="og:title" content="켈리(Kelly) 비중 계산기">
-<meta property="og:description" content="배당+확률로 Kelly 비중을 계산(보수적 옵션/캡 지원).">
-<meta property="og:url" content="https://88st.cloud/tool/kelly/">
-<link rel="stylesheet" href="/assets/vendor-teasers.css">
+<meta content="배당과 내 예상 확률을 입력하면 켈리 기준 베팅 비중을 계산합니다. 보수적 1/2·1/4 Kelly, 최대 비중 캡을 지원합니다." name="description"/>
+<link href="https://88st.cloud/tool/kelly/" rel="canonical"/>
+<meta content="index,follow" name="robots"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="켈리(Kelly) 비중 계산기" property="og:title"/>
+<meta content="배당+확률로 Kelly 비중을 계산(보수적 옵션/캡 지원)." property="og:description"/>
+<meta content="https://88st.cloud/tool/kelly/" property="og:url"/>
+<link href="/assets/vendor-teasers.css" rel="stylesheet"/>
 <style>
 :root{
   --accent1:#5fb2ff; --accent2:#a8dcff; --accentRGB:95,178,255;
@@ -42,124 +43,111 @@ a{color:inherit;text-decoration:none;}
 .row{display:flex;gap:10px;flex-wrap:wrap;}
 .field{flex:1;min-width:180px;display:flex;flex-direction:column;gap:6px;}
 label{font-size:12px;color:var(--muted);font-weight:900;}
-input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.28);color:#fff;outline:none;font-weight:900;}
+input,select{width:100%;padding:11px 12px;border-radius:14px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.28);color:var(--text);outline:none;font-weight:900;}
 .btnrow{margin-top:10px;display:flex;gap:10px;flex-wrap:wrap;}
-.btn{display:inline-flex;align-items:center;justify-content:center;padding:12px 14px;border-radius:16px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);color:rgba(255,255,255,.92);font-weight:1000;cursor:pointer;user-select:none;box-shadow:0 12px 34px rgba(0,0,0,.38);}
+.btn{display:inline-flex;align-items:center;justify-content:center;padding:12px 14px;border-radius:16px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.06);color:var(--text);font-weight:1000;cursor:pointer;user-select:none;box-shadow:0 12px 34px rgba(0,0,0,.38);}
 .btn.primary{border-color:rgba(var(--accentRGB),.22);background:rgba(255,255,255,.08);} 
 .kv{margin-top:10px;display:grid;grid-template-columns:1fr 1fr;gap:10px;}
 @media(max-width:720px){.kv{grid-template-columns:1fr;}}
 .kv .item{border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.18);border-radius:18px;padding:12px;}
 .kv .k{color:var(--muted);font-weight:900;font-size:12px;}
 .kv .v{margin-top:6px;font-weight:1000;font-size:16px;}
-.small{font-size:12px;color:rgba(255,255,255,.60);line-height:1.6;}
+.small{font-size:12px;color:var(--muted);line-height:1.6;}
 </style>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"켈리 기준은 무엇인가요?","acceptedAnswer":{"@type":"Answer","text":"켈리 기준은 장기 로그성장률을 최대화하는 베팅 비중을 산출하는 방법입니다. 변동성이 커서 보수적(1/2, 1/4 Kelly)으로 쓰는 경우가 많습니다."}},{"@type":"Question","name":"확률이 정확하지 않으면 어떻게 되나요?","acceptedAnswer":{"@type":"Answer","text":"내 예상 확률이 과대평가되면 권장 비중이 과도해질 수 있습니다. 보수 계수(예: 1/4 Kelly)와 최대 비중 캡을 함께 사용하는 것을 권장합니다."}},{"@type":"Question","name":"켈리가 0% 이하로 나오면?","acceptedAnswer":{"@type":"Answer","text":"해당 입력 조건에서는 기대값이 음수로 해석될 수 있어 비중 0%가 권장됩니다."}},{"@type":"Question","name":"이 도구는 투자/배팅 조언인가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 본 도구는 판단 보조용 계산기이며, 결과/수익을 보장하지 않습니다."}}]}</script>
 <script src="/assets/js/88st-analytics.js"></script>
-<script src="/assets/js/vendor-teasers.js" defer></script>
-
-<link rel="stylesheet" href="/assets/88st-theme.css?v=20260210_2">
-<script defer src="/assets/88st-theme.js?v=20260210_2"></script>
+<script defer="" src="/assets/js/vendor-teasers.js"></script>
+<link href="/assets/88st-theme.css?v=20260210_3" rel="stylesheet"/>
+<script defer="" src="/assets/88st-theme.js?v=20260210_3"></script>
 </head>
 <body>
 <div class="wrap">
-  <div class="topbar">
-    <div class="brand"><span class="badge">88</span> Kelly 비중</div>
-    <div class="navlinks">
-      <a href="/" data-cta="nav_home">메인</a>
-      <a href="/analysis/" data-cta="nav_analysis">분석기</a>
-      <a href="/tool/overround/" data-cta="nav_overround">오버라운드</a>
-    </div>
-  </div>
-
-  <div class="hero">
-    <h1>켈리(Kelly) 비중 계산기</h1>
-    <p>배당과 내 예상 확률을 입력하면 켈리 기준 비중을 계산합니다. 변동성을 줄이려면 <b>1/2·1/4 Kelly</b>와 <b>최대 비중 캡</b>을 함께 사용하세요.</p>
-  </div>
-
-  <div class="grid">
-    <div class="card">
-      <div class="row">
-        <div class="field">
-          <label>배당(Decimal)</label>
-          <input id="odds" inputmode="decimal" placeholder="예: 1.95" value="1.95">
-        </div>
-        <div class="field">
-          <label>내 예상 확률(%)</label>
-          <input id="prob" inputmode="decimal" placeholder="예: 55" value="55">
-        </div>
-      </div>
-      <div class="row" style="margin-top:10px;">
-        <div class="field">
-          <label>보수 계수</label>
-          <select id="frac">
-            <option value="1">1.0 (Full Kelly)</option>
-            <option value="0.5">0.5 (Half Kelly)</option>
-            <option value="0.25" selected>0.25 (Quarter Kelly)</option>
-            <option value="0.1">0.1 (Very conservative)</option>
-          </select>
-        </div>
-        <div class="field">
-          <label>최대 비중 캡(%)</label>
-          <input id="cap" inputmode="decimal" placeholder="예: 10" value="10">
-        </div>
-      </div>
-      <div class="btnrow">
-        <button type="button" class="btn primary" id="calcBtn">계산</button>
-        <button type="button" class="btn" id="resetBtn">예시값</button>
-      </div>
-      <div class="small" style="margin-top:10px;">
+<div class="topbar">
+<div class="brand"><span class="badge">88</span> Kelly 비중</div>
+<div class="navlinks">
+<a data-cta="nav_home" href="/">메인</a>
+<a data-cta="nav_analysis" href="/analysis/">분석기</a>
+<a data-cta="nav_overround" href="/tool/overround/">오버라운드</a>
+</div>
+</div>
+<div class="hero">
+<h1>켈리(Kelly) 비중 계산기</h1>
+<p>배당과 내 예상 확률을 입력하면 켈리 기준 비중을 계산합니다. 변동성을 줄이려면 <b>1/2·1/4 Kelly</b>와 <b>최대 비중 캡</b>을 함께 사용하세요.</p>
+</div>
+<div class="grid">
+<div class="card">
+<div class="row">
+<div class="field">
+<label>배당(Decimal)</label>
+<input id="odds" inputmode="decimal" placeholder="예: 1.95" value="1.95"/>
+</div>
+<div class="field">
+<label>내 예상 확률(%)</label>
+<input id="prob" inputmode="decimal" placeholder="예: 55" value="55"/>
+</div>
+</div>
+<div class="row" style="margin-top:10px;">
+<div class="field">
+<label>보수 계수</label>
+<select id="frac">
+<option value="1">1.0 (Full Kelly)</option>
+<option value="0.5">0.5 (Half Kelly)</option>
+<option selected="" value="0.25">0.25 (Quarter Kelly)</option>
+<option value="0.1">0.1 (Very conservative)</option>
+</select>
+</div>
+<div class="field">
+<label>최대 비중 캡(%)</label>
+<input id="cap" inputmode="decimal" placeholder="예: 10" value="10"/>
+</div>
+</div>
+<div class="btnrow">
+<button class="btn primary" id="calcBtn" type="button">계산</button>
+<button class="btn" id="resetBtn" type="button">예시값</button>
+</div>
+<div class="small" style="margin-top:10px;">
         Kelly 공식(승/패 단일): <b>f* = (b·p - q) / b</b>, b=odds-1, q=1-p
       </div>
-    </div>
-
-    <div class="card">
-      <div class="kv">
-        <div class="item"><div class="k">기본 Kelly 비중</div><div class="v" id="kFull">—</div></div>
-        <div class="item"><div class="k">보수 적용 비중</div><div class="v" id="kAdj">—</div></div>
-        <div class="item"><div class="k">캡 적용 최종 비중</div><div class="v" id="kFinal">—</div></div>
-        <div class="item"><div class="k">판정</div><div class="v" id="judgement">—</div></div>
-      </div>
-      <div class="small" style="margin-top:10px;">
+</div>
+<div class="card">
+<div class="kv">
+<div class="item"><div class="k">기본 Kelly 비중</div><div class="v" id="kFull">—</div></div>
+<div class="item"><div class="k">보수 적용 비중</div><div class="v" id="kAdj">—</div></div>
+<div class="item"><div class="k">캡 적용 최종 비중</div><div class="v" id="kFinal">—</div></div>
+<div class="item"><div class="k">판정</div><div class="v" id="judgement">—</div></div>
+</div>
+<div class="small" style="margin-top:10px;">
         ※ 확률 입력은 본인 추정치입니다. 과대평가 시 리스크가 급증할 수 있어요.
       </div>
-    </div>
-  </div>
-
-      <div class="vendor-teaser" id="vendorTeaser" aria-label="인증 업체 빠른보기"
-      data-vt-fixed="1,2,3,4" data-vt-pool="10,11,8,7" data-vt-pick="2">
-      <div class="vt-head">
-        <div>
-          <div class="vt-title">인증 업체 빠른보기</div>
-          <div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
-        </div>
-        <div class="badge">보증·인증</div>
-      </div>
-
-      <div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
-      <div class="vendor-grid" data-vt-grid="fixed"></div>
-
-      <div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
-      <div class="vendor-grid" data-vt-grid="rot"></div>
-
-      <div class="vt-actions">
-        <a href="/#vendorTop" data-utm="1" data-cta="vendor_teaser_all">전체 혜택/공지 보기</a>
-        <a class="primary" href="/analysis/" data-utm="1" data-cta="vendor_teaser_to_analysis">분석기 바로가기</a>
-      </div>
-    </div>
-
-
-  <div class="card" style="margin-top:12px;">
-    <h2 style="margin:0 0 10px;font-size:16px;">자주 묻는 질문(FAQ)</h2>
-    <div class="faq">
-      <details><summary style="cursor:pointer;font-weight:1000;">켈리 비중이 높게 나오면 그대로 따라도 되나요?</summary><div class="small" style="margin-top:8px;">추천하지 않습니다. 확률 추정 오차와 변동성 때문에 <b>1/4 Kelly + 비중 캡</b>을 기본으로 두는 것이 안전합니다.</div></details>
-      <details><summary style="cursor:pointer;font-weight:1000;">배당이 낮아도 켈리가 나올 수 있나요?</summary><div class="small" style="margin-top:8px;">네. 확률 대비 배당이 충분히 유리(+EV)하면 비중이 0%보다 커질 수 있습니다.</div></details>
-      <details><summary style="cursor:pointer;font-weight:1000;">여러 베팅을 동시에 하면?</summary><div class="small" style="margin-top:8px;">동시에 여러 포지션을 잡으면 총 위험이 커집니다. 총합 비중이 과도해지지 않게 관리하세요.</div></details>
-    </div>
-  </div>
-
-  <div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
 </div>
-
+</div>
+<div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
+<div class="vt-head">
+<div>
+<div class="vt-title">인증 업체 빠른보기</div>
+<div class="vt-sub">고정 4 + 오늘의 추천 2(페이지별 자동 로테이션) · 카드 클릭 → 상세 혜택/공지 · 가입코드 미입력 시 혜택 불가</div>
+</div>
+<div class="badge">보증·인증</div>
+</div>
+<div class="vt-sec-title">필수 추천 TOP4 (고정)</div>
+<div class="vendor-grid" data-vt-grid="fixed"></div>
+<div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
+<div class="vendor-grid" data-vt-grid="rot"></div>
+<div class="vt-actions">
+<a data-cta="vendor_teaser_all" data-utm="1" href="/#vendorTop">전체 혜택/공지 보기</a>
+<a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
+</div>
+</div>
+<div class="card" style="margin-top:12px;">
+<h2 style="margin:0 0 10px;font-size:16px;">자주 묻는 질문(FAQ)</h2>
+<div class="faq">
+<details><summary style="cursor:pointer;font-weight:1000;">켈리 비중이 높게 나오면 그대로 따라도 되나요?</summary><div class="small" style="margin-top:8px;">추천하지 않습니다. 확률 추정 오차와 변동성 때문에 <b>1/4 Kelly + 비중 캡</b>을 기본으로 두는 것이 안전합니다.</div></details>
+<details><summary style="cursor:pointer;font-weight:1000;">배당이 낮아도 켈리가 나올 수 있나요?</summary><div class="small" style="margin-top:8px;">네. 확률 대비 배당이 충분히 유리(+EV)하면 비중이 0%보다 커질 수 있습니다.</div></details>
+<details><summary style="cursor:pointer;font-weight:1000;">여러 베팅을 동시에 하면?</summary><div class="small" style="margin-top:8px;">동시에 여러 포지션을 잡으면 총 위험이 커집니다. 총합 비중이 과도해지지 않게 관리하세요.</div></details>
+</div>
+</div>
+<div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
+</div>
 <script>
 function fmtPct(x){ return (x*100).toFixed(2)+"%"; }
 function calcKelly(){
